[package]
name = "redox_users"
version = "0.3.2"
authors = ["Jose Narvaez <goyox86@gmail.com>", "Wesley Hershberger <mggmugginsmc@gmail.com>"]
description = "A Rust library to access Redox users and groups functionality"
license = "MIT"
repository = "https://gitlab.redox-os.org/redox-os/users"
documentation = "https://docs.rs/redox_users"
readme = "README.md"
keywords = ["redox", "auth"]

[dependencies]
rust-argon2 = "0.6"
getrandom = "0.1"
redox_syscall = "0.1"
