[package]
name = "redox_users"
version = "0.3.5"
authors = ["Jose Narvaez <goyox86@gmail.com>", "Wesley Hershberger <mggmugginsmc@gmail.com>"]
description = "A Rust library to access Redox users and groups functionality"
license = "MIT"
repository = "https://gitlab.redox-os.org/redox-os/users"
documentation = "https://docs.rs/redox_users"
readme = "README.md"
keywords = ["redox", "auth"]

[dependencies]
rust-argon2 = { version = "0.8", optional = true }
getrandom = "0.1"
redox_syscall = "0.1"

[target.'cfg(not(target_os = "redox"))'.dependencies]
nix = "0.18"

[features]
default = ["auth"]

# Enable password authentication using argon2. Some API may not be available
# without default features.
auth = ["rust-argon2"]

